--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       -
+        name: Checkout repository
+        uses: actions/checkout@v3
+      -
         name: Install depencencies
         run: yarn install
       -
