--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,8 +2,8 @@ name: ci
 
 on:
   push:
-    branches:
-      - 'master'
+    tags:
+      - "v*.*.*"
 
 jobs:
   build:
@@ -21,7 +21,6 @@ jobs:
       -
         name: Release build
         uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
         with:
           fail_on_unmatched_files: true
           files: out/make/**/*.*
